# graw-merger

./: .clang_complete  .gitignore  CMakeLists.txt  Doxyfile  INSTALL  Makefile.am  README.md  bootstrap  configure.ac
GETConsolidate/: DataFile.cpp  DataFile.h  Event.cpp  Event.h  EventFile.cpp  EventFile.h  ExceptionWithString.cpp  ExceptionWithString.h  GETDataFile.cpp  GETDataFile.h  GETExceptions.h  GETFrame.cpp  GETFrame.h  GETFrameDataItem.cpp  GETFrameDataItem.h  GRAWDataItem.h  GRAWFile.cpp  GRAWFile.h  PadLookupTable.cpp  PadLookupTable.h  Trace.cpp  Trace.h  UserInterface.cpp  UserInterface.h  Utilities.h  main.cpp
GETConsolidate Tests/: GETConsolidate Tests-Info.plist  GETDataFileTests.mm  GETFrameTests.mm  TraceTests.mm
GETConsolidate.xcodeproj/: project.pbxproj
GETConsolidate.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GETConsolidate.xcodeproj/project.xcworkspace/xcshareddata/: GETConsolidate.xccheckout
GETConsolidate.xcodeproj/xcshareddata/xcschemes/: GETConsolidate run ls.xcscheme  GETConsolidate run merge.xcscheme  GetConsolidateTests All.xcscheme  GetConsolidateTests GETFrame.xcscheme  GetConsolidateTests Trace.xcscheme  GetConsolidateTests.xcscheme
GETConsolidate.xcodeproj/xcuserdata/josh.xcuserdatad/xcschemes/: GETConsolidate.xcscheme  xcschememanagement.plist
GetConsolidateTests/: EventTests.cpp  GETFrameTests.cpp  MockGETDataFile.h  MockGRAWFile.h  TraceTests.cpp  main.cpp
GetConsolidateTests/MockData/: GoodFrame.graw
Package/: distribution.xml  pkg_build.sh
docs/: Doxyfile  Makefile
docs/source/: GETFrame.rst  GRAW.rst  GRAWFile.rst  GRAWFrame.rst  classes.rst  conf.py  datafile.rst  event.rst  event_file.rst  event_file_class.rst  exceptions.rst  formats.rst  getdatafile.rst  index.rst  intro.rst  padlookuptable.rst  trace.rst  usage.rst
get-manip/: Constants.h  DataFile.cpp  DataFile.h  Event.cpp  Event.h  EventFile.cpp  EventFile.h  GETConsolidate.1  GMExceptions.h  GRAWDataItem.cpp  GRAWDataItem.h  GRAWFile.cpp  GRAWFile.h  GRAWFrame.cpp  GRAWFrame.h  HDFDataStore.cpp  HardwareAddress.h  LRUCache.h  LookupTable.cpp  LookupTable.h  Makefile.am  Merger.cpp  Merger.h  PadLookupTable.cpp  PadLookupTable.h  SyncQueue.h  Trace.cpp  Trace.h  UserInterface.cpp  UserInterface.h  Utilities.h  main.cpp
get-manip-tests/: EventTests.cpp  FakeRawFrame.cpp  FakeRawFrame.h  GRAWFrameTests.cpp  GetConsolidateTests.1  MockGRAWFile.h  PadLookupTableTests.cpp  TraceTests.cpp  main.cpp
get-manip-tests/MockData/: MockLookup.csv
get-manip.xcodeproj/: project.pbxproj
get-manip.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
get-manip.xcodeproj/project.xcworkspace/xcshareddata/: GETConsolidate.xccheckout
get-manip.xcodeproj/xcshareddata/xcschemes/: GETConsolidate run ls.xcscheme  GetConsolidateTests All.xcscheme  GetConsolidateTests GETFrame.xcscheme  GetConsolidateTests Trace.xcscheme  get-manip run ls.xcscheme  get-manip run merge.xcscheme  get-manip-tests All.xcscheme  get-manip-tests Event.xcscheme  get-manip-tests GRAWFrame.xcscheme  get-manip-tests PadLookupTable.xcscheme  get-manip-tests Trace.xcscheme  libgetdata.xcscheme
get-manip.xcodeproj/xcshareddata/xcschemes/get-manip run merge w/:  peds + supp.xcscheme
get-manip.xcodeproj/xcuserdata/josh.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: Constants.h  DataFile.h  Event.h  FileIndex.h  FileIndexer.h  GMExceptions.h  GRAWDataItem.h  GRAWFile.h  GRAWFrame.h  HDFDataStore.h  HardwareAddress.h  LRUCache.h  Logger.h  LookupTable.h  Merger.h  PadLookupTable.h  RawFrame.h  SyncQueue.h  UserInterface.h  Utilities.h
libgetevt/: DataFile.cpp  DataFile.h  Event.cpp  Event.h  GRAWDataItem.cpp  GRAWFile.cpp  GRAWFrame.cpp  GRAWFrame.h  Trace.cpp  Trace.h  Utilities.h
libgetevt-tests/: Event_tests.cpp  Trace_tests.cpp  main.cpp
src/: DataFile.cpp  Event.cpp  FileIndex.cpp  FileIndexer.cpp  GRAWFile.cpp  GRAWFrame.cpp  HDFDataStore.cpp  LookupTable.cpp  Merger.cpp  PadLookupTable.cpp  UserInterface.cpp  main.cpp
test/: EventTests.cpp  FakeRawFrame.cpp  GRAWFrameTests.cpp  PadLookupTableTests.cpp  TraceTests.cpp
