bin_PROGRAMS = get-manip

AM_CXXFLAGS = -Wall -std=c++11

get_manip_SOURCES = DataFile.cpp Event.cpp EventFile.cpp GRAWDataItem.cpp GRAWFile.cpp GRAWFrame.cpp Merger.cpp PadLookupTable.cpp Trace.cpp UserInterface.cpp main.cpp
get_manip_LDADD = -lboost_log -lboost_date_time -lboost_system -lboost_program_options -lboost_filesystem